--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,8 @@ body {
     color: rgba(0, 0, 0, 0.1);
     letter-spacing: 1px;
     margin: -0.3em 0 0.5em;
+    margin-top: 2rem;
+    letter-spacing: 1.5rem;
 
 }
 
@@ -72,7 +74,16 @@ form {
 }
 
 .btn.create {
+     background: var(--clr-primary);
      font-size: 1.5rem;
+     font-weight: 900;
+     margin-right: 0.25em;
+     transition: opacity 250ms ease-in;
+}
+
+.btn.create2 {
+    color: gray;
+    font-size: 1.5rem;
      font-weight: 900;
      margin-right: 0.25em;
      transition: opacity 250ms ease-in;
@@ -235,21 +246,52 @@ form {
 
 .delete-stuff {
     display: flex;
-    justify-content: space-evenly;
-    position: absolute;
-    width: 100%;
+   /* justify-content: space-evenly;*/
+    margin-top: 3rem;
+    margin-left: 15rem;
+    width: 2rem;
     left: 0;
     bottom: -35px;
-    color: var(--clr-light);
-
+    color: black;
+    
+    
 }
 
 .btn.delete {
     opacity: 0.7;
-    font-size: 1rem;
+    font-size: 1.3rem;
     transition: color 200ms;
+    border-radius: 20%;
+    margin-left: -6rem;
+    background-color: peru;
+
+}
+
+.btn.delete2 {
+    opacity: 0.7;
+    font-size: 1.3rem;
+    transition: color 200ms;
+    border-radius: 20%;
+    margin-left: 4rem;
+    background-color: peru;
 }
 
 .btn.delete:hover {
   color: var(--clr-warning);
+}
+
+.btn.delete2:hover {
+    color: var(--clr-warning);
+}
+
+
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  [class*="col-"] {
+    width: 100%;
+  }
+  .btn.delete { margin-right: 20rem;}
+   .btn.delete2{ position: absolute; right: 12rem; font-size: 1.5rem; }
+   .task-count { position: absolute; right: 0.1rem; font-size: 0.7rem;}
+   
 }
